eureka-server/eks-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: from0tocloud-backend
  labels:
    app: eureka-server-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eureka-server-app
  template:
    metadata:
      labels:
        app: eureka-server-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: eureka
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/eureka-server:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8761
