eureka-server/eks-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
  namespace: from0tocloud-backend
  labels:
    app: eureka-server-app
spec:
  type: LoadBalancer
  selector:
    app: eureka-server-app
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
