eureka-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: from0tocloud-backend
  labels:
    app: eureka-server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server-app
  template:
    metadata:
      labels:
        app: eureka-server-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
    spec:
      containers:
      - name: eureka
        image: 129822709161.dkr.ecr.eu-west-1.amazonaws.com/eureka-server:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: from0tocloud-backend
  labels:
    app: eureka-server-app
spec:
  type: LoadBalancer
  selector:
    app: eureka-server-app
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: from0tocloud-backend
  name: eureka-server-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port: 
                  number: 8761
